# Rezume

./: .gitignore  implementation_plan.md  start.sh
backend/: .env.example  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  migrate_to_work_entries.py
backend/app/models/: __init__.py  generated_resume.py  github_user.py  jd_cache.py  llm_provider.py  project.py  resume_config.py  resume_history.py  user_profile.py  user_skill.py  work_entry.py
backend/app/providers/: __init__.py  anthropic_provider.py  base.py  google_provider.py  manager.py  openai_provider.py
backend/app/routers/: __init__.py  config.py  github.py  health.py  history.py  profile.py  projects.py  providers.py  resumes.py  skills.py
backend/app/schemas/: config.py  project.py  provider.py  resume.py  user_profile.py
backend/app/services/: ats_verifier.py  bullet_generator.py  generation.py  github_service.py  ingestion.py  jd_parser.py  pdf_service.py  qdrant_service.py  retrieval.py  skill_bridge.py
backend/app/templates/: resume.tex.j2
backend/local_qdrant/: meta.json
backend/local_qdrant/collection/work_chunks/: storage.sqlite
frontend/: README.md  index.html
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: AddProviderModal.jsx  Layout.jsx  OssFetcher.jsx  ProjectForm.jsx  ProviderTable.jsx  ResumePreview.jsx  Sidebar.jsx  StatusBanner.jsx
frontend/src/hooks/: useProviders.js
frontend/src/pages/: Dashboard.jsx  GenerateResume.jsx  History.jsx  Profile.jsx  Projects.jsx  ProvidersSettings.jsx  ResumeConfig.jsx  (+1 more)
