[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "deepdiff>=9.1.0",
    "fastapi>=0.136.3",
    "fastembed>=0.8.0",
    "gitingest>=0.3.1",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "requests>=2.34.2",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.48.0",
]
